# vk_tessellated_clusters

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
shaders/: blas_clusters_insert.comp.glsl  blas_setup_insertion.comp.glsl  build.glsl  build_setup.comp.glsl  cluster_classify.comp.glsl  clusters_cull.comp.glsl  culling.glsl  displacement.glsl  fullscreen.vert.glsl  fullscreen_background.frag.glsl  fullscreen_write_depth.frag.glsl  hbao_blur_apply.comp.glsl  hbao_calc.comp.glsl  hbao_deinterleave.comp.glsl  hbao_depthlinearize.comp.glsl  hbao_reinterleave.comp.glsl  hbao_viewnormal.comp.glsl  instances_classify.comp.glsl  nvhiz-update.comp.glsl  render_raster.frag.glsl  render_raster_clusters.mesh.glsl  render_raster_clusters_batched.mesh.glsl  render_raster_clusters_batched.task.glsl  render_raster_clusters_tess.mesh.glsl  render_raytrace.rgen.glsl  render_raytrace.rmiss.glsl  render_raytrace_clusters.rchit.glsl  render_shading.glsl  shaderio.h  shaderio_building.h  shaderio_core.h  shaderio_scene.h  tessellation.glsl  triangle_split.comp.glsl  triangle_tess_template_instantiate.comp.glsl
src/: cgltf.cpp  hbao_pass.cpp  hbao_pass.hpp  main.cpp  nvhiz_vk.cpp  nvhiz_vk.hpp  raytracing_cluster_data.cpp  raytracing_cluster_data.hpp  renderer.cpp  renderer.hpp  renderer_raster_clusters_tess.cpp  renderer_raytrace_clusters_tess.cpp  resources.cpp  resources.hpp  scene.cpp  scene.hpp  scene_gltf.cpp  tessellatedclusters.cpp  tessellatedclusters.hpp  tessellatedclusters_ui.cpp  tessellation_table.cpp  tessellation_table.hpp  tessellation_table_nv_raw.hpp  vk_nv_cluster_acc.cpp  vk_nv_cluster_acc.h
